# video-annotation

./: README.md  main.py  pyproject.toml
tools/: SAM.py  clean_video.py  display_info.py  on_changes.py  save_data.py  trackers.py  type_expectancy.py
tools/labelling_states/: normal_periode.py  tracking_periode.py
tools/labelling_states/tracking/: tracking_periode.py  tracking_tools.py
